# native_network_interface

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_network_interface_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: native_network_interface.podspec
ios/NetworkInterface.xcframework/: Info.plist
ios/NetworkInterface.xcframework/ios-arm64_x86_64-simulator/: libnetwork_interface.dylib
lib/: native_network_interface.dart  native_network_interface_bindings_generated.dart
lib/src/: native_network_interface_bindings_generated.dart
macos/: native_network_interface.podspec
macos/Classes/: native_network_interface.c
macos/Frameworks/: libnetwork_interface.dylib
native/: .gitignore  CMakeLists.txt  build_android.zsh  build_macos.zsh  compile_ios.zsh  install_android.zsh  install_ios.zsh  install_macos.zsh
native/include/: network_interface.h
native/src/posix/: ip_address.c  ip_address.h  mac_address.c  mac_address.h  name.c  name.h  network_interface.c
native/test/: main.c
